Changelog
=========

0.1 (unreleased)
----------------
 - First draft of the navigator