@@ -1,3 +1,4 @@
 *.pyc
+*.un~
 /dist/
 /*.egg-info
